Changes towards version 0.5:
- Fixed Yehat Rebel left hand doubling up problem (bug #807) - Alex
- Fixed the problem with Melnorme stripping Chmmr bomb/crystal
  modules from the ship in a fuel deal (bug #803) - Alex
- Corrected baseline of 'j' in Micro font (bug #797) - Alex
- Fixed small VUX animation glitch (out of order frames; bug #808) - Alex
- CANCEL now behaves as expected in setup menu - Michael
- Only SELECT and CANCEL trigger the fade-to-black at the end of a
  Super Melee, solving the issue in bug #547 - Michael
- Admiral ZEX is no longer referred to as "Commander" or "Zex" (bug 
  #811) - Michael
- Keypress status is not reset when entering battle mode (solves
  bug #596) - Michael  
- Added the rest of devel/ and users/ documentation into MSVC .dsp
  files (bug #589) - Michael
- Fixed PNG transparency info (tRNS chunk) in all images according
  to info specified by .ani - Alex
- Comm animation fixes (bugs 557, 705, 806); from chmmravatar, Alex
- Imported DOS versions of alien comm graphics which have richer
  palettes and look better in most cases (bug #314) - Alex
- Added slider controls for volume to setup menu - Michael
- Added --shield and --scaler hq to setup menu - Michael
- Fixed lockup when skipping past VUX beast analysis data in Starbase
  (bug #790; should take care of all spliced comm edge cases) - Alex
- Added 3DO-style throbbing slave shield (--shield; bug #32);
  special thanks to Nic for inspiration and some code - Alex
- Rotating 3D planet changes: nicer looking slave shield; planet now
  finally looks like a rotating sphere (and not cylinder); added some
  lighting variance to give it a 3D feel (not a smooth ball) - Alex
- Refactored colormaps storage, management and transforms; paletted
  images rendering should be much faster now - Alex
- Corrected intro slide 5 (crosshair removed); bug #794, from AusME
- Split off alien comm colormaps from global scclrtab into
  corresponding race dirs (avoids potential mod collisions) - Alex